[FIX] Hide converse contact list on small devices

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3490,6 +3490,13 @@ body.fullscreen.tiki.navbar-padding {
 .tiki #conversejs ~ .modal-backdrop.fade.show, .tiki #conversejs.converse-embedded ~ .modal-backdrop.fade.show {
   display: none; }
 
+@media screen and (max-width: 480px) {
+  .tiki #conversejs.converse-embedded {
+    margin: 0;
+    right: 0px;
+    left: 0px;
+    bottom: 0px; } }
+
 div.tablesorter-resizable-container {
   clear: both;
   width: 100%; }
